i18n/nl/docusaurus-plugin-content-docs/version-1.3.0/user/user-manual/dashboard.md
---
title: Dashboard
sidebar_label: Dashboard
description: Een overzicht van het Time Management App Dashboard, met de Prioriteitenmatrix, tijdsverdelingsgrafieken en snelle navigatie voor projecten en taken.
---

# Dashboard

## Introductie
Het **Dashboard** is het hoofdscherm van de Time Management-applicatie. Het biedt een snel overzicht van taken, projecten en tijdsverdeling op basis van prioriteit.

Dit scherm stelt gebruikers in staat om:
* Taken te identificeren die onmiddellijke aandacht vereisen.
* Werk efficiënt te organiseren.
* De bestede tijd aan activiteiten en projecten te monitoren.

---

## Dashboard Overzicht
Het Dashboard bestaat uit de volgende hoofdsecties:
1. Kopsectie (Bovenste Balk)
2. Melding Ongeslagen Concepten (Unsaved Drafts)
3. Prioriteitenmatrix
4. Navigatietabbladen (Overzicht, Projecten, Taken)
5. Snelle Actieknop

---

## Kopsectie
Bevindt zich bovenaan het scherm.

### Kenmerken:
* **Menu-icoon :** Opent het zijnavigatiemenu.
* **Accountnaam:** Toont het actieve gebruikersaccount.
* **Toevoegen-icoon (Klok met +):** Wordt gebruikt om snel een nieuwe urenstaat-invoer (timesheet entry) aan te maken.
* **Meldingen-icoon :** Toont waarschuwingen en updates.
* **Info-icoon :** Biedt aanvullende informatie over de dashboardgrafiekengids.

---

## Melding Ongeslagen Concepten
Bij het starten van de app kan een pop-up **Ongeslagen Concepten Gevonden** verschijnen als er niet-ingediend werk is.
* Stelt de gebruiker op de hoogte van niet-ingediend werk uit een vorige sessie (bijv. Urenstaten, Projectupdates).
* Spoort de gebruiker aan om de betreffende formulieren te openen om hun wijzigingen te herstellen.

---

## Prioriteitenmatrix
De Prioriteitenmatrix categoriseert taken op basis van urgentie en belangrijkheid. Het is visueel georganiseerd met **URGENT** (Dringend) en **NOT URGENT** (Niet Dringend) op de bovenste as, en **IMPORTANT** (Belangrijk) en **NOT IMPORTANT** (Niet Belangrijk) op de zij-as.

### Categorieën:
* **Eerst Doen (Dringend & Belangrijk):** Taken die onmiddellijke aandacht vereisen (Rode tegel).
* **Vervolgens Doen (Niet Dringend & Belangrijk):** Belangrijke taken die kunnen worden ingepland (Blauwe tegel).
* **Later Doen (Dringend & Niet Belangrijk):** Taken die kunnen worden uitgesteld of gedelegeerd (Groene tegel).
* **Niet Doen (Niet Dringend & Niet Belangrijk):** Taken die onnodig zijn (Grijze tegel).

### Tijdweergave:
Elke categorie toont de totale bestede tijd (bijv. `0H`), wat gebruikers helpt bij het evalueren van productiviteit en tijdsbesteding.

---

## Navigatietabbladen
Onder de Prioriteitenmatrix is het dashboard verdeeld in drie primaire tabbladen: **Overzicht**, **Projecten** en **Taken**.

### 1. Tabblad Overzicht
Toont visuele grafieken voor urenregistratie.
* **Meest Tijdrovende Projecten (Donutgrafiek):** Visuele weergave van de tijdsverdeling over projecten. Grotere segmenten duiden op een hoger tijdsgebruik.
* **Percentagewaarde:** Het exacte aandeel van de totale geregistreerde tijd dat aan dit specifieke project is toegewezen (bijv. "51,8%").
### 2. Tabblad Projecten
Toont gedetailleerde informatie over gebruikersprojecten, samen met een hoofdtotaal van de gelogde uren over alle projecten.
* **Bestede Tijd per Project (Staafdiagram):** Toont de bestede tijd per project. De assen maken een visuele vergelijking van de inspanning over projecten mogelijk. Bevat **"Toon volgende 10"** en **"Toon minder"** knoppen zijn onderaan beschikbaar om de projectenlijst uit te breiden.

### 3. Tabblad Taken
Een speciaal tabblad voor het beheren en bekijken van individuele taken.* 

* **Zoekbalk:** Maakt het snel opzoeken van projecten mogelijk ("Zoek projecten...").
* **Sorteeropties:**
    * **Meeste Tijd:** Sorteer op de hoogste bestede tijd.
    * **Taken:** Sorteer op het aantal taken.
    * **A–Z:** Alfabetische sortering.
* **Projectenlijst:** Toont individuele projecten met hun specifieke aantallen taken, totale bestede tijd en een visuele voortgangsindicator.

**Weergave Projectdetails:**
Tikken op een specifiek project in de lijst navigeert naar een gedetailleerde weergave voor dat project, die het volgende omvat:
* Een samenvattende koptekst die de `TOTALE` tijd, `GEMIDDELDE` tijd, het totale aantal `TAKEN` en de `TOPTAAK` toont.
* Een specifiek staafdiagram dat de bestede tijd uitsplitst naar individuele taken binnen dat project.
* Een lijst met individuele taken met hun percentage van de projecttijd, het totale aantal uren en een navigatiepijl voor verdere details.

---

## Snelle Actieknop
Een zwevende actieknop (cyaan cirkel met een menu-icoon) in de rechterbenedenhoek van het scherm.

### Functies:
* Een nieuwe taak toevoegen.
* Een urenstaat-invoer aanmaken.
* Een activiteit loggen.